--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ classifiers = [
 ]
 
 dependencies = [
+    "fire>=0.7.1",
+    "loguru>=0.7.3",
     "numpy>=2.0.2",
     "openpyxl>=3.1.5",
     "pandas>=2.3.2",
