--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,10 @@ classifiers = [
 ]
 
 dependencies = [
+    "duckdb>=1.3.2",
     "fire>=0.7.1",
     "loguru>=0.7.3",
+    "motherduck>=0.0.0",
     "numpy>=2.0.2",
     "openpyxl>=3.1.5",
     "pandas>=2.3.2",
