--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.3.2",
     "pandera>=0.26.1",
+    "python-dotenv>=1.1.1",
 ]
 
 [project.urls]
