--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "duckdb>=1.3.2",
     "fire>=0.7.1",
     "loguru>=0.7.3",
+    "matplotlib>=3.9.4",
     "motherduck>=0.0.0",
     "numpy>=2.0.2",
     "openpyxl>=3.1.5",
